--- a/python_lead/.gitignore
+++ b/python_lead/.gitignore
@@ -1,4 +1,4 @@
-/__pycache__/conftest.cpython-310-pytest-9.0.2.pyc
+/__pycache__/
 /.hypothesis/constants
 /.hypothesis/tmp/tmpp0cq_4x6
 /.hypothesis/unicode_data/13.0.0/charmap.json.gz
