Using customer API endpoint

--- a/go_lead/.env.example
+++ b/go_lead/.env.example
@@ -19,7 +19,8 @@ QUEUE_TYPE=redis
 REDIS_URL=redis://localhost:6379/0
 
 # Customer API Configuration
-CUSTOMER_API_URL=https://api.customer.example.com
+CUSTOMER_API_URL=https://contactapi.static.fyi/lead/receive/fake/USER_ID/
+CUSTOMER_API_TOKEN=FakeCustomerToken
 CUSTOMER_API_TOKEN=your_bearer_token_here
 CUSTOMER_API_TIMEOUT=30s
 CUSTOMER_PRODUCT_NAME=solar_panel_installation
