Angepasst mit trigger

--- a/python_lead/.env
+++ b/python_lead/.env
@@ -10,6 +10,11 @@ DB_PASSWORD=postgres
 DB_HOST=localhost
 DB_PORT=5432
 
+# Test Database (IMPORTANT: Use separate database for E2E tests!)
+# Set this to prevent data loss during test execution
+# Example: lead_gateway_test
+TEST_DB_NAME=
+
 # Celery
 CELERY_BROKER_URL=redis://localhost:6379/0
 CELERY_RESULT_BACKEND=redis://localhost:6379/0
@@ -22,8 +27,8 @@ ATTRIBUTE_MAPPING_PATH=customer_attribute_mapping.json
 CUSTOMER_REFERER=https://www.hausfrage.de/
 
 # Validation
-ZIPCODE_PATTERN=^66\d{3}$
-ZIP_NOT_66XXX=ZIP_NOT_66XXX
+ZIPCODE_PATTERN=^53\d{3}$
+ZIPCODE_PATTERN_ERROR=ZIPCODE_INVALID
 NOT_HOMEOWNER=NOT_HOMEOWNER
 MISSING_REQUIRED_FIELD=MISSING_REQUIRED_FIELD
 
